@@ -39,6 +39,10 @@ HISTORY
 
   ++ Bugfixes:
 
+  2009-08-30 Simon Goldschmidt
+  * ip.c: Fixed bug bug #27345: "ip_frag() does not use the LWIP_NETIF_LOOPBACK
+    function" by checking for loopback before calling ip_frag
+
   2009-08-25 Simon Goldschmidt
   * dhcp.c: fixed invalid dependency to etharp_query if DHCP_DOES_ARP_CHECK==0
 
